# mfterm

./: .gitignore  AUTHORS  Makefile.am  configure.ac  crypto1.c  crypto1.h  dictionary.c  dictionary.h  dictionary_parser.l  emulator.c  emulator.h  mad.c  mad.h  mfterm.c  mfterm.h  mifare.c  mifare.h  mifare_ctrl.c  mifare_ctrl.h  ndef.c  ndef.h  tag.c  tag.h  term_cmd.c  term_cmd.h  util.c  util.h
